<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Home time</string>
    <string name="action_settings">Settings</string>
    <string name="button">When can I go home?</string>
    <string name="sugg_arrv">08:00</string>
    <string name="sugg_pause">01:00</string>
    <string name="sugg_ht">17:00</string>
    <string name="lb_arrv">Arrivaltime</string>
    <string name="lb_ht">Home time</string>
    <string name="lb_pt">Pause</string>
    <string name="next_day">Next Day?</string>
    <string name="lv_left">Time Left</string>
    <string name="lv_overTime">Over Time</string>
    <string name="title_activity_menu">Menu</string>
    <string name="lb_week_h">Change to $h week?</string>
    <string name="pick_time">Please pick a time</string>
    <string name="title_activity_main">Main</string>
    <string name="appwidget_text">Home time Widget</string>
    <string name="add_widget">Add widget</string>
    <string name="TxtCalculator">Calculator</string>
    <string name="settings">Settings</string>
    <string name="db">Database</string>
    <string name="ToastWeekHours">Changed Weekhours to: </string>
    <string name="title_activity_db">DB</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_time_database">TimeDatabase</string>
    <string name="CheckIn">Check In</string>
    <string name="Pause">Pause</string>
    <string name="CheckOut">Check Out</string>

</resources>
